add native perf test for one change case
+review REVIEW-5686